--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
   font_awesome_flutter: ^10.6.0
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
