--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   dio: ^5.4.0
 
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
